--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: AlexLiu
 description: Learning Indoor SLAM and geometric segmentation
 url: https://leongoretzkatju.github.io/
-avatar: /avatar.jpeg
+avatar: /student.jpg
 paginate: 5
 permalink: pretty
 cover_image: /bg.jpeg
