--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://leongoretzkatju.github.io/
 avatar: /student.jpg
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /background.jpg
 
 # Gems
 plugins:
