--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: AlexLiu
+title: Liu Xiangchen
 description: Learning Indoor SLAM and geometric segmentation
 url: https://leongoretzkatju.github.io/
 avatar: /student.jpg
