--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Liu Xiangchen
-description: Learning Indoor SLAM and geometric segmentation
+description: IndoorSLAM PointCloud-Completion Robotics
 url: https://leongoretzkatju.github.io/
 avatar: /student.jpg
 paginate: 5
